@@ -1,3 +1,8 @@
+Sat Sep 12 16:14:31 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
+
+	* file.c: access()/eaccess() wrapping methods check more than just uid.
+	  [fix GH-1007][ci skip] Patch by @eam
+
 Sat Sep 12 16:07:01 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* README.md: improve markdown rendering for readable.
